<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="folder_name" translatable="false" />
    <string name="activity_not_found" translatable="false">App isn\'t installed.</string>
    <string name="long_press_widget_to_add" translatable="false">Touch &amp; hold to pick up a widget.</string>
    <string name="widget_dims_format" translatable="false">%1$d \u00d7 %2$d</string>
    <string name="external_drop_widget_pick_format" translatable="false">%1$s (%2$d \u00d7 %3$d)</string>
    <string name="group_applications" translatable="false">Apps</string>
    <string name="out_of_space" translatable="false">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space" translatable="false">No more room in the Favorites tray</string>
    <string name="shortcut_uninstalled" translatable="false">Shortcut \"<xliff:g example="Browser" id="name">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate" translatable="false">Shortcut \"<xliff:g example="Browser" id="name">%s</xliff:g>\" already exists.</string>
    <string name="title_select_application" translatable="false">Choose app</string>
    <string name="all_apps_button_label" translatable="false">Apps</string>
    <string name="all_apps_home_button_label" translatable="false">Home</string>
    <string name="delete_zone_label_workspace" translatable="false">Remove</string>
    <string name="delete_target_label" translatable="false">Remove</string>
    <string name="delete_target_uninstall_label" translatable="false">Uninstall</string>
    <string name="info_target_label" translatable="false">App info</string>
    <string name="accessibility_search_button" translatable="false">Search</string>
    <string name="accessibility_voice_search_button" translatable="false">Voice Search</string>
    <string name="permlab_install_shortcut" translatable="false">install shortcuts</string>
    <string name="permdesc_install_shortcut" translatable="false">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut" translatable="false">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut" translatable="false">Allows the app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings" translatable="false">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings" translatable="false">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings" translatable="false">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings" translatable="false">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text" translatable="false">Problem loading widget</string>
    <string name="uninstall_system_app_text" translatable="false">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text" translatable="false">Unnamed Folder</string>
    <string name="default_scroll_format" translatable="false">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format" translatable="false">Home screen %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format" translatable="false">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format" translatable="false">Widgets page %1$d of %2$d</string>
    <string name="folder_opened" translatable="false">Folder opened, <xliff:g example="5" id="width">%1$d</xliff:g> by <xliff:g example="3" id="height">%2$d</xliff:g></string>
    <string name="folder_tap_to_close" translatable="false">Touch to close folder</string>
    <string name="folder_tap_to_rename" translatable="false">Touch to save rename</string>
    <string name="folder_closed" translatable="false">Folder closed</string>
    <string name="folder_renamed" translatable="false">Folder renamed to <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="folder_name_format" translatable="false">Folder: <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="widget_button_text" translatable="false">Widgets</string>
    <string name="wallpaper_button_text" translatable="false">Wallpapers</string>
    <string name="settings_button_text" translatable="false">Settings</string>
    <string name="home_screen_settings" translatable="false">HOMESCREEN</string>
    <string name="drawer_settings" translatable="false">DRAWER</string>
    <string name="app_settings" translatable="false">GENERAL</string>
    <string name="setting_state_on" translatable="false">ON</string>
    <string name="setting_state_off" translatable="false">OFF</string>
    <string name="themes_button_text" translatable="false">Themes</string>
    <string name="scrolling_page_outlines" translatable="false">Page outlines</string>
    <string name="scrolling_fade_adjacent" translatable="false">Fade side pages</string>
    <string name="scrolling_wallpaper" translatable="false">Scroll wallpaper</string>
    <string name="scroll_effect_text" translatable="false">Scroll effect</string>
    <string name="drawer_sorting_text" translatable="false">Sorting mode</string>
    <string name="sort_mode_title" translatable="false">Title</string>
    <string name="sort_mode_launch_count" translatable="false">Launch count</string>
    <string name="sort_mode_install_time" translatable="false">Install time</string>
    <string name="home_screen_search_text" translatable="false">Search bar</string>
    <string name="larger_icons_text" translatable="false">Larger icons</string>
    <string name="hide_icon_labels" translatable="false">Hide icon labels</string>
    <string name="wallpaper_instructions" translatable="false">Set wallpaper</string>
    <string name="image_load_fail" translatable="false">Coudn\'t load image</string>
    <string name="wallpaper_load_fail" translatable="false">Couldn\'t load image as wallpaper</string>
    <plurals name="number_of_items_selected" translatable="false">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <string name="wallpaper_accessibility_name" translatable="false">Wallpaper %1$d of %2$d</string>
    <string name="announce_selection" translatable="false">Selected <xliff:g example="Wallpaper 3 of 10" id="label">%1$s</xliff:g></string>
    <string name="wallpaper_delete" translatable="false">Delete</string>
    <string name="pick_image" translatable="false">Pick image</string>
    <string name="pick_wallpaper" translatable="false">Wallpapers</string>
    <string name="crop_wallpaper" translatable="false">Crop wallpaper</string>
    <string name="pref_title_theme_settings" translatable="false">Themes</string>
    <string name="pref_title_theme_package" translatable="false">Select your theme</string>
    <string name="pref_summary_theme_package" translatable="false">Choose your theme for Turbo Launcher</string>
    <string name="pref_title_theme_preview" translatable="false">Theme Preview</string>
    <string name="pref_summary_theme_preview" translatable="false">Preview of the selected theme</string>
    <string name="pref_title_theme_icons" translatable="false">Use Theme Icons</string>
    <string name="pref_summary_theme_icons" translatable="false">Deselect this to use default icons</string>
    <string name="pref_title_theme_font" translatable="false">Use Theme Font</string>
    <string name="pref_summary_theme_font" translatable="false">Deselect this to use default font</string>
    <string name="pref_themes_apply_theme" translatable="false">Apply theme!</string>
    <string name="pref_themes_get_themes" translatable="false">Get themes!</string>
    <string name="set_default_launcher" translatable="false">Set default launcher</string>
    <string name="rate_app" translatable="false">Rate app</string>
    <string name="more_apps" translatable="false">More apps</string>
    <string name="share_this_app" translatable="false">Share this app</string>
    <string name="policy" translatable="false">Policy</string>
</resources>