<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:padding="16dp"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<TextView
		android:id="@+id/ThemeTitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge" />

	<TextView
		android:id="@+id/ThemeDescription"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceSmall" />

	<ImageView
		android:id="@+id/ivThemeIcon"
		android:contentDescription="@string/app_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/ic_theme" />

	<Button
		android:id="@+id/btThemeApply"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:onClick="applyTheme"
		android:text="@string/pref_themes_apply_theme" />

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="getThemes"
		android:text="@string/pref_themes_get_themes" />

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="setDefaultLauncher"
		android:text="@string/set_default_launcher" />
</LinearLayout>
