<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@color/settings_bg_color"
        android:orientation="vertical"
        android:paddingBottom="@dimen/overview_panel_bottom_padding">

        <LinearLayout
            android:id="@+id/llSettingsPaneHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/overview_panel_top_padding">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="@dimen/overview_panel_list_padding"
                android:paddingBottom="@dimen/overview_panel_bottom_padding">

                <Space
                    android:layout_width="0dip"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvWallpaperButton"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawableTop="@drawable/selector_wallpaper_button"
                    android:drawablePadding="4dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@string/wallpaper_button_text"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />

                <Space
                    android:layout_width="0dip"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvWidgetButton"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawableTop="@drawable/selector_widget_button"
                    android:drawablePadding="4dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@string/widget_button_text"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />

                <Space
                    android:layout_width="0dip"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvThemesButton"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawableTop="@drawable/selector_themes_button"
                    android:drawablePadding="4dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@string/themes_button_text"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />

                <Space
                    android:layout_width="0dip"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvSettingsButton"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawableTop="@drawable/settings_button"
                    android:drawablePadding="4dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@string/settings_button_text"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />

                <Space
                    android:layout_width="0dip"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="0dip"
            android:layout_height="1dp"
            android:layout_weight="0.125" />

        <view
            android:id="@+id/lvSettingsHomeScreen"
            class="com.roy.turbo.launcher.list.PinnedHeaderListView"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:fastScrollEnabled="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDarkPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark"
        android:orientation="horizontal"
        android:visibility="gone" />
</FrameLayout>
